# fs-websocket-dsp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fs_ws_dsp.c  fs_ws_signal.c  rebuild.sh  server.c  server_signal.c  ws_server_dsp.c  wssignal  wssignal.c
include/: fs_ws_dsp.h  fs_ws_signal.h
src/dsp_client_nodejs/: index.js  package.json
src/dsp_client_nodejs/src/: Client.js  Command.js  Commands.js  Message.js  index.js
src/dsp_server_c/: fs_ws_dsp.c  fs_ws_dsp_cmd_echo.c  fs_ws_dsp_cmd_fft.c  fs_ws_dsp_cmd_firfilt.c  fs_ws_dsp_command.c  fs_ws_dsp_echo.c  fs_ws_dsp_fn_echo.c  fs_ws_dsp_message.c  ws_server.c  ws_server_dsp.c
src/dsp_server_c/include/: fs_ws_dsp.h  fs_ws_dsp_cmd_echo.h  fs_ws_dsp_cmd_fft.h  fs_ws_dsp_cmd_firfilt.h  fs_ws_dsp_command.h  fs_ws_dsp_message.h
