project(fs-websocket-signal C)
cmake_minimum_required(VERSION 2.8.9)
find_package(libwebsockets CONFIG REQUIRED)
list(APPEND CMAKE_MODULE_PATH ${LWS_CMAKE_DIR})
include(CheckCSourceCompiles)
include(LwsCheckRequirements)

set ( FS_WS_SERVER_LINK_LIBS libliquid.so libwebsockets.so )
set ( FS_WS_SERVER_SRC ws_server.c )
set ( FS_WS_SERVER_OUT ws_server )
set(requirements 1)
require_lws_config(LWS_ROLE_WS 1 requirements)
require_lws_config(LWS_WITH_SERVER 1 requirements)

if (requirements)
    add_executable(${FS_WS_SERVER_OUT} ${FS_WS_SERVER_SRC})
	target_link_libraries(${FS_WS_SERVER_OUT} ${FS_WS_SERVER_LINK_LIBS})
	if (websockets_shared)
		target_link_libraries(${FS_WS_SERVER_OUT} websockets_shared ${LIBWEBSOCKETS_DEP_LIBS})
		add_dependencies(${FS_WS_SERVER_OUT} websockets_shared)
	else()
		target_link_libraries(${FS_WS_SERVER_OUT} websockets ${LIBWEBSOCKETS_DEP_LIBS})
	endif()
endif()
